作者:彭晋龙 时间:2020/03/12 说明:添加Seata处理分布式事务

--- a/mountain-shop-parent/mountain-shop-config/pom.xml
+++ b/mountain-shop-parent/mountain-shop-config/pom.xml
@@ -15,5 +15,6 @@
   	<module>mountain-shop-config-log</module>
   	<module>mountain-shop-config-sso</module>
   	<module>mountain-shop-config-mvc</module>
+  	<module>mountain-shop-config-seata</module>
   </modules>
 </project>
