--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 		<spring-boot.version>2.4.2</spring-boot.version>
 		<spring-cloud.version>2020.0.1</spring-cloud.version>
 		<spring-cloud-alibaba.version>2021.1</spring-cloud-alibaba.version>
-		<spring-boot-admin-starter.version>2.5.2</spring-boot-admin-starter.version>
+		<spring-boot-admin-starter.version>2.5.3</spring-boot-admin-starter.version>
 		<redisson-spring-boot-starter.version>3.10.4</redisson-spring-boot-starter.version>
 		<spring-cloud-starter-oauth2.version>2.2.4.RELEASE</spring-cloud-starter-oauth2.version>
 		<!-- Spring Component End -->
@@ -370,7 +370,7 @@
 		</resources>
 	</build>
 	<repositories>
-		<repository>
+		<!-- <repository>
 			<id>maven-public</id>
 			<name>Nexus Repository</name>
 			<url>http://8.129.174.183:8081/repository/maven-public/</url>
@@ -380,7 +380,7 @@
 			<releases>
 				<enabled>true</enabled>
 			</releases>
-		</repository>
+		</repository> --> 
 		<repository>
 			<id>aliyun-repos</id>
 			<name>Aliyun Repository</name>
