Upgrade added automatic table building
Upgrade added automatic table building

--- a/zhongshi-etc-config/zhongshi-etc-config-db/pom.xml
+++ b/zhongshi-etc-config/zhongshi-etc-config-db/pom.xml
@@ -27,8 +27,15 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-jdbc</artifactId>
+			<groupId>com.gitee.sunchenbin.mybatis.actable</groupId>
+			<artifactId>mybatis-enhance-actable</artifactId>
+			<version>${mybatis-enhance-actable.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.baomidou</groupId>
+					<artifactId>mybatis-plus-annotation</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<!-- ORM End -->
 
