--- a/zhongshi-etc-service/zhongshi-etc-service-base/zhongshi-etc-service-base-run/pom.xml
+++ b/zhongshi-etc-service/zhongshi-etc-service-base/zhongshi-etc-service-base-run/pom.xml
@@ -5,17 +5,20 @@
 	<parent>
 		<groupId>com.zhongshi</groupId>
 		<artifactId>zhongshi-etc-service-base</artifactId>
-		<version>1.5.0-SNAPSHOT</version> 
+		<version>1.5.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>zhongshi-etc-service-base-run</artifactId>
 
-	<dependencies>  
-	 
-		<dependency> 
+	<dependencies>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-openfeign</artifactId>
-		</dependency> 
-		 
+			<artifactId>spring-cloud-starter-bootstrap</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-openfeign-core</artifactId>
+		</dependency>
 	</dependencies>
 
 </project>
