--- a/zhongshi-etc-api-entity/zhongshi-etc-result/pom.xml
+++ b/zhongshi-etc-api-entity/zhongshi-etc-result/pom.xml
@@ -64,6 +64,11 @@
 			<groupId>org.springframework.security</groupId>
   			<artifactId>spring-security-core</artifactId>   
 		</dependency> 
+		
+		<dependency>
+			<groupId>com.alibaba.cloud</groupId>
+			<artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+		</dependency>
 		<!-- SpringCloud End -->
 
 
