--- a/zhongshi-etc-common/zhongshi-etc-common-tool/pom.xml
+++ b/zhongshi-etc-common/zhongshi-etc-common-tool/pom.xml
@@ -21,6 +21,13 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId> 
 		</dependency>
+		
+		<dependency>    
+		    <groupId>net.sf.json-lib</groupId>    
+		    <artifactId>json-lib</artifactId>    
+		    <version>2.4</version>  
+		    <classifier>jdk15</classifier>
+		</dependency>
 
 		<dependency>
 			<groupId>com.squareup.okhttp3</groupId>
