--- a/zhongshi-etc-common/zhongshi-etc-common-tool/pom.xml
+++ b/zhongshi-etc-common/zhongshi-etc-common-tool/pom.xml
@@ -49,6 +49,11 @@
 			<artifactId>easypoi-spring-boot-starter</artifactId>
 			<version>${easypoi.version}</version> 
 		</dependency> 
+		
+		<dependency>
+			<groupId>org.springframework.cloud</groupId> 
+  			<artifactId>spring-cloud-context</artifactId>
+		</dependency>
 		<!-- Other Component End -->
 
 
