--- a/zhongshi-etc-api-entity/zhongshi-etc-base-entity/zhongshi-etc-base-vo/pom.xml
+++ b/zhongshi-etc-api-entity/zhongshi-etc-base-entity/zhongshi-etc-base-vo/pom.xml
@@ -14,10 +14,10 @@
 
 		<!-- Project Begin -->  
 		<dependency>
-			<groupId>com.zhongshi</groupId>
-			<artifactId>zhongshi-etc-result</artifactId>
-			<version>${zhongshi-etc-result.version}</version>
-		</dependency> 
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>1.5.22</version>
+        </dependency>
 		<!-- Project End -->
 
 
