--- a/zhongshi-etc-common/zhongshi-etc-common-tool/pom.xml
+++ b/zhongshi-etc-common/zhongshi-etc-common-tool/pom.xml
@@ -20,7 +20,7 @@
 		<dependency>
 			<groupId>cglib</groupId>
 			<artifactId>cglib</artifactId> 
-			<version>3.3.0</version>
+			<version>${cglib.version}</version>
 		</dependency>
 		
 		<dependency>
@@ -31,7 +31,7 @@
 		<dependency>    
 		    <groupId>net.sf.json-lib</groupId>    
 		    <artifactId>json-lib</artifactId>    
-		    <version>2.4</version>  
+		    <version>${json-lib.version}</version>  
 		    <classifier>jdk15</classifier>
 		</dependency>
 
