--- a/zhongshi-etc-config/zhongshi-etc-config-db/pom.xml
+++ b/zhongshi-etc-config/zhongshi-etc-config-db/pom.xml
@@ -37,6 +37,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib-jdk8</artifactId>
+        </dependency>
 		<!-- ORM End -->
 
 
