--- a/zhongshi-etc-config/zhongshi-etc-config-feign/pom.xml
+++ b/zhongshi-etc-config/zhongshi-etc-config-feign/pom.xml
@@ -28,6 +28,12 @@
 			<artifactId>zhongshi-etc-result</artifactId>
 			<version>${zhongshi-etc-result.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>javax.ws.rs</groupId>
+			<artifactId>javax.ws.rs-api</artifactId>
+			<version>2.1</version>
+		</dependency>
 		<!-- Spring Cloud End -->
 		
 	</dependencies>
