--- a/zhongshi-etc-config/zhongshi-etc-config-discovery/pom.xml
+++ b/zhongshi-etc-config/zhongshi-etc-config-discovery/pom.xml
@@ -23,6 +23,10 @@
 			<version>${zhongshi-etc-result.version}</version>
 		</dependency>
 		
+		<dependency>
+   			<groupId>org.springframework.cloud</groupId>
+   			<artifactId>spring-cloud-loadbalancer</artifactId>
+		</dependency>
 	</dependencies>
 
 
