--- a/maozi-cloud-config/maozi-cloud-config-discovery/pom.xml
+++ b/maozi-cloud-config/maozi-cloud-config-discovery/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.maozi</groupId>
 		<artifactId>maozi-cloud-config</artifactId>
-		<version>${parent.revision}</version>
+		<version>${parent-revision}</version>
 	</parent>
 	<artifactId>maozi-cloud-config-discovery</artifactId>
 
