--- a/maozi-cloud-entity/maozi-cloud-business-entity/maozi-cloud-do/maozi-cloud-seata-do/pom.xml
+++ b/maozi-cloud-entity/maozi-cloud-business-entity/maozi-cloud-do/maozi-cloud-seata-do/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.maozi</groupId>
     <artifactId>maozi-cloud-do</artifactId>
-    <version>${parent.revision}</version>
+    <version>${parent-revision}</version>
   </parent>
   <artifactId>maozi-cloud-seata-do</artifactId>
 </project>
