--- a/maozi-cloud-common/maozi-cloud-common-generate-code/pom.xml
+++ b/maozi-cloud-common/maozi-cloud-common-generate-code/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.maozi</groupId>
 		<artifactId>maozi-cloud-common</artifactId>
-		<version>${parent.revision}</version>
+		<version>${parent-revision}</version>
 	</parent>
 	<artifactId>maozi-cloud-common-generate-code</artifactId>
 
