--- a/maozi-cloud-common/maozi-cloud-common-utils/pom.xml
+++ b/maozi-cloud-common/maozi-cloud-common-utils/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.maozi</groupId>
 		<artifactId>maozi-cloud-common</artifactId>
-		<version>${parent.revision}</version> 
+		<version>${parent-revision}</version>
 	</parent>
 	<artifactId>maozi-cloud-common-utils</artifactId>
 
