--- a/maozi-cloud-entity/maozi-cloud-base-entity/maozi-cloud-base-do/pom.xml
+++ b/maozi-cloud-entity/maozi-cloud-base-entity/maozi-cloud-base-do/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.maozi</groupId>
 		<artifactId>maozi-cloud-base-entity</artifactId>
-		<version>${parent.revision}</version>
+		<version>${parent-revision}</version>
 	</parent>
 	<artifactId>maozi-cloud-base-do</artifactId>
 
