--- a/maozi-cloud-entity/maozi-cloud-base-entity/maozi-cloud-base-dto/pom.xml
+++ b/maozi-cloud-entity/maozi-cloud-base-entity/maozi-cloud-base-dto/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.maozi</groupId>
         <artifactId>maozi-cloud-base-entity</artifactId>
-        <version>${parent.revision}</version>
+        <version>${parent-revision}</version>
     </parent>
     <artifactId>maozi-cloud-base-dto</artifactId>
 
