--- a/maozi-cloud-entity/maozi-cloud-base-entity/pom.xml
+++ b/maozi-cloud-entity/maozi-cloud-base-entity/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.maozi</groupId>
         <artifactId>maozi-cloud-entity</artifactId>
-        <version>${parent.revision}</version>
+        <version>${parent-revision}</version>
     </parent>
     <artifactId>maozi-cloud-base-entity</artifactId>
     <packaging>pom</packaging>
