--- a/maozi-cloud-entity/maozi-cloud-business-entity/maozi-cloud-do/pom.xml
+++ b/maozi-cloud-entity/maozi-cloud-business-entity/maozi-cloud-do/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.maozi</groupId>
 		<artifactId>maozi-cloud-business-entity</artifactId>
-		<version>${parent.revision}</version>
+		<version>${parent-revision}</version>
 	</parent> 
 	<artifactId>maozi-cloud-do</artifactId>
 	<packaging>pom</packaging>
