--- a/maozi-cloud-entity/maozi-cloud-business-entity/maozi-cloud-dto/maozi-cloud-oauth-token-dto/pom.xml
+++ b/maozi-cloud-entity/maozi-cloud-business-entity/maozi-cloud-dto/maozi-cloud-oauth-token-dto/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.maozi</groupId>
 		<artifactId>maozi-cloud-dto</artifactId>
-		<version>${parent.revision}</version>
+		<version>${parent-revision}</version>
 	</parent>
 	<artifactId>maozi-cloud-oauth-token-dto</artifactId>
 
