--- a/maozi-cloud-entity/maozi-cloud-business-entity/maozi-cloud-enum/pom.xml
+++ b/maozi-cloud-entity/maozi-cloud-business-entity/maozi-cloud-enum/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.maozi</groupId>
 		<artifactId>maozi-cloud-business-entity</artifactId>
-		<version>${parent.revision}</version>
+		<version>${parent-revision}</version>
 	</parent>
 	<artifactId>maozi-cloud-enum</artifactId>
 	<packaging>pom</packaging>
