--- a/maozi-cloud-entity/maozi-cloud-business-entity/pom.xml
+++ b/maozi-cloud-entity/maozi-cloud-business-entity/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.maozi</groupId>
     <artifactId>maozi-cloud-entity</artifactId>
-    <version>${parent.revision}</version>
+    <version>${parent-revision}</version>
   </parent>
   <artifactId>maozi-cloud-business-entity</artifactId>
   <packaging>pom</packaging>
