--- a/maozi-cloud-entity/pom.xml
+++ b/maozi-cloud-entity/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.maozi</groupId>
         <artifactId>maozi-cloud-parent</artifactId>
-        <version>${parent.revision}</version>
+        <version>${parent-revision}</version>
     </parent>
     <artifactId>maozi-cloud-entity</artifactId>  
     <packaging>pom</packaging>
