--- a/maozi-cloud-service/maozi-cloud-service-base/maozi-cloud-service-base-rpc-api/pom.xml
+++ b/maozi-cloud-service/maozi-cloud-service-base/maozi-cloud-service-base-rpc-api/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.maozi</groupId>
 		<artifactId>maozi-cloud-service-base</artifactId>
-		<version>${parent.revision}</version>
+		<version>${parent-revision}</version>
 	</parent>
 	<artifactId>maozi-cloud-service-base-rpc-api</artifactId>
 	
