--- a/maozi-cloud-service/maozi-cloud-service-base/maozi-cloud-service-base-run/pom.xml
+++ b/maozi-cloud-service/maozi-cloud-service-base/maozi-cloud-service-base-run/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.maozi</groupId>
     <artifactId>maozi-cloud-service-base</artifactId>
-    <version>${parent.revision}</version>
+    <version>${parent-revision}</version>
   </parent>
   <artifactId>maozi-cloud-service-base-run</artifactId>
   
