--- a/maozi-cloud-service/maozi-cloud-service-base/pom.xml
+++ b/maozi-cloud-service/maozi-cloud-service-base/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.maozi</groupId>
         <artifactId>maozi-cloud-service</artifactId>
-        <version>${parent.revision}</version>
+        <version>${parent-revision}</version>
     </parent>
     <artifactId>maozi-cloud-service-base</artifactId>
     <packaging>pom</packaging>
