--- a/maozi-cloud-service/maozi-cloud-service-business/maozi-cloud-service-impl/maozi-cloud-service-bd/pom.xml
+++ b/maozi-cloud-service/maozi-cloud-service-business/maozi-cloud-service-impl/maozi-cloud-service-bd/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.maozi</groupId>
     <artifactId>maozi-cloud-service-impl</artifactId>
-    <version>${parent.revision}</version>
+    <version>${parent-revision}</version>
   </parent>
   <artifactId>maozi-cloud-service-bd</artifactId>
 </project>
