--- a/maozi-cloud-service/maozi-cloud-service-business/maozi-cloud-service-impl/pom.xml
+++ b/maozi-cloud-service/maozi-cloud-service-business/maozi-cloud-service-impl/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.maozi</groupId>
 		<artifactId>maozi-cloud-service-business</artifactId>
-		<version>${parent.revision}</version>
+		<version>${parent-revision}</version>
 	</parent>
 	<artifactId>maozi-cloud-service-impl</artifactId>
 	<packaging>pom</packaging>
