--- a/maozi-cloud-service/maozi-cloud-service-business/maozi-cloud-service-rpc-api/maozi-cloud-service-rpc-api-oauth-token/pom.xml
+++ b/maozi-cloud-service/maozi-cloud-service-business/maozi-cloud-service-rpc-api/maozi-cloud-service-rpc-api-oauth-token/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.maozi</groupId>
     <artifactId>maozi-cloud-service-rpc-api</artifactId>
-    <version>${parent.revision}</version>
+    <version>${parent-revision}</version>
   </parent>
   <artifactId>maozi-cloud-service-rpc-api-oauth-token</artifactId>
 </project>
