--- a/maozi-cloud-service/maozi-cloud-service-business/maozi-cloud-service-rpc-api/pom.xml
+++ b/maozi-cloud-service/maozi-cloud-service-business/maozi-cloud-service-rpc-api/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.maozi</groupId>
         <artifactId>maozi-cloud-service-business</artifactId>
-        <version>${parent.revision}</version>
+        <version>${parent-revision}</version>
     </parent>
     <artifactId>maozi-cloud-service-rpc-api</artifactId>
  	<packaging>pom</packaging>
