--- a/maozi-cloud-service/maozi-cloud-service-plugin/maozi-cloud-service-db-impl/pom.xml
+++ b/maozi-cloud-service/maozi-cloud-service-plugin/maozi-cloud-service-db-impl/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.maozi</groupId>
     <artifactId>maozi-cloud-service-plugin</artifactId>
-    <version>${parent.revision}</version>
+    <version>${parent-revision}</version>
   </parent>
   <artifactId>maozi-cloud-service-db-impl</artifactId>
   
