--- a/maozi-cloud-service/pom.xml
+++ b/maozi-cloud-service/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.maozi</groupId>
 		<artifactId>maozi-cloud-parent</artifactId>
-		<version>${parent.revision}</version>
+		<version>${parent-revision}</version>
 	</parent> 
 	<artifactId>maozi-cloud-service</artifactId>
 	<packaging>pom</packaging>
