--- a/maozi-cloud-entity/maozi-cloud-base-entity/maozi-cloud-base-dto/pom.xml
+++ b/maozi-cloud-entity/maozi-cloud-base-entity/maozi-cloud-base-dto/pom.xml
@@ -11,11 +11,11 @@
 
     <dependencies>
 
-       <dependency>
-         <groupId>com.github.xiaoymin</groupId>
-         <artifactId>knife4j-annotations</artifactId>
-         <version>${knife4j-annotations.version}</version>
-        </dependency>
+      <dependency>
+        <groupId>io.swagger.core.v3</groupId>
+        <artifactId>swagger-annotations</artifactId>
+        <version>${swagger.version}</version>
+      </dependency>
 
       <dependency>
         <groupId>com.maozi</groupId>
