--- a/maozi-cloud-service/maozi-cloud-service-business/maozi-cloud-service-rest-api/pom.xml
+++ b/maozi-cloud-service/maozi-cloud-service-business/maozi-cloud-service-rest-api/pom.xml
@@ -15,6 +15,12 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-openfeign-core</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>com.maozi</groupId>
+			<artifactId>maozi-cloud-service-base-rest-api</artifactId>
+			<version>${maozi-cloud-service-base-rest-api.version}</version>
+		</dependency>
 		 
 	</dependencies>
 
