--- a/maozi-cloud-config/maozi-cloud-config-job/pom.xml
+++ b/maozi-cloud-config/maozi-cloud-config-job/pom.xml
@@ -23,6 +23,11 @@
 			<artifactId>maozi-cloud-common-result</artifactId>
 			<version>${maozi-cloud-common-result.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
 		
 	</dependencies>
 
