--- a/maozi-cloud-config/maozi-cloud-config-monitor/pom.xml
+++ b/maozi-cloud-config/maozi-cloud-config-monitor/pom.xml
@@ -46,7 +46,13 @@
 			<artifactId>jolokia-core</artifactId>
 		</dependency>
 
-	</dependencies>
+    <dependency>
+      <groupId>com.maozi</groupId>
+      <artifactId>maozi-cloud-service-base-rest-api</artifactId>
+      <version>${maozi-cloud-service-base-rest-api.version}</version>
+    </dependency>
+
+  </dependencies>
 
 
 </project>
