--- a/maozi-cloud-service/maozi-cloud-service-base/maozi-cloud-service-base-impl/pom.xml
+++ b/maozi-cloud-service/maozi-cloud-service-base/maozi-cloud-service-base-impl/pom.xml
@@ -9,11 +9,19 @@
     </parent>
     <artifactId>maozi-cloud-service-base-impl</artifactId>
     
-    <dependencies>
+  <dependencies>
+
 		<dependency>
 			<groupId>com.alibaba.cloud</groupId>
 			<artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
 		</dependency>
-	</dependencies>
+
+    <dependency>
+      <groupId>com.maozi</groupId>
+      <artifactId>maozi-cloud-service-base-rest-api</artifactId>
+      <version>${maozi-cloud-service-base-rest-api.version}</version>
+    </dependency>
+
+  </dependencies>
 	
 </project>
